[gd_scene load_steps=8 format=2]

[ext_resource path="res://asset/tank/hull.png" type="Texture" id=1]
[ext_resource path="res://asset/tank/cannon.png" type="Texture" id=2]
[ext_resource path="res://asset/tank/turret.png" type="Texture" id=3]
[ext_resource path="res://asset/tank/tank.gd" type="Script" id=4]
[ext_resource path="res://asset/tank/star.png" type="Texture" id=5]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.00990099, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.727723, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45.5, 24.5 )

[node name="tank" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 4 )

[node name="hull" type="Sprite" parent="."]
texture = ExtResource( 1 )
flip_h = true

[node name="aiming_point" type="Position2D" parent="hull"]
position = Vector2( -45, 1 )
rotation = -2.68596

[node name="turret" type="Node2D" parent="."]

[node name="cannon" type="Sprite" parent="turret"]
position = Vector2( -40, 0 )
texture = ExtResource( 2 )
flip_h = true

[node name="turret" type="Sprite" parent="turret"]
texture = ExtResource( 3 )
flip_h = true

[node name="RayCast2D" type="RayCast2D" parent="turret"]
position = Vector2( -70, 0 )
enabled = true
cast_to = Vector2( -600, 0 )

[node name="bullet_spawn_point" type="Position2D" parent="turret"]
position = Vector2( -84, 1 )
rotation = -2.68596

[node name="bullet_target_point" type="Position2D" parent="turret"]
position = Vector2( -434, -2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
one_shot = true
explosiveness = 1.0
texture = ExtResource( 5 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 345.0
scale_amount_curve = SubResource( 2 )
color = Color( 1, 0.4, 0, 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 2.5, -0.5 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="firing_delay" type="Timer" parent="."]
one_shot = true

[node name="dead_delay" type="Timer" parent="."]
one_shot = true

[connection signal="input_event" from="." to="." method="_on_tank_input_event"]
[connection signal="timeout" from="dead_delay" to="." method="_on_dead_delay_timeout"]
